@@ -1,3 +1,8 @@
+2003/10/30 11:29 muppetman
+
+	* GenPod.pm: make sure that all signatures get the same pod directive.
+	don't add sigils to return type names.
+
 2003/10/30 09:30 rwmcfa1
 	
 	* Glib/MakeHelper.pm: improved/safer rules for building the documentation
